# sane-finances

./: .coveragerc  .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  setup.cfg
.github/workflows/: dev_publish.yml  tests.yml
scripts/: run_coverage.bat  upload_to_pypi.bat
src/sane_finances/: __init__.py  annotations.py  retry_policy.py
src/sane_finances/communication/: cachers.py  downloader.py  url_downloader.py
src/sane_finances/inspection/: analyzers.py  serialize.py
src/sane_finances/sources/: __init__.py  base.py  computing.py  generic.py  inspection.py
src/sane_finances/sources/bloomberg/: __init__.py
src/sane_finances/sources/bloomberg/v2021/: __init__.py  exporters.py  meta.py  parsers.py
src/sane_finances/sources/cbr/: __init__.py
src/sane_finances/sources/cbr/v2016/: __init__.py  exporters.py  meta.py  parsers.py
src/sane_finances/sources/ishares/: __init__.py
src/sane_finances/sources/lbma/: __init__.py
src/sane_finances/sources/moex/: __init__.py
src/sane_finances/sources/msci/: __init__.py
src/sane_finances/sources/solactive/: __init__.py
src/sane_finances/sources/spdji/: __init__.py
src/sane_finances/sources/yahoo/: __init__.py
tests/sane_finances/: test_annotations.py  test_retry_policy.py
tests/sane_finances/communication/: fakes.py  test_cachers.py  test_downloader.py  test_url_downloader.py
tests/sane_finances/inspection/: fakes.py  test_analyzers.py  test_serialize.py
tests/sane_finances/sources/: common.py  fakes.py  test_base.py  test_computing.py  test_generic.py  test_inspection.py
(+88 files in other folders)
