[metadata]
name = sane-finances
version = attr: sane_finances.__version__
author = Sane Development
author_email = sane.development.org@gmail.com
description = A library for download and parse financial data from different sources
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StanleySane/sane-finances
license = BSD 3-Clause License
project_urls =
    Bug Tracker = https://github.com/StanleySane/sane-finances/issues
    Source = https://github.com/StanleySane/sane-finances
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
keywords =
    MSCI
    MOEX
    Moscow Exchange
    Solactive
    CBR
    Bank of Russia
    Yahoo Finance
    S&P
    Dow Jones
    iShares
    LBMA
    Bloomberg
    Stocks
    Bonds
    ETF

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src